Replace header banner image with local logo
Removed the header banner image and added a local logo image.

--- a/index.html
+++ b/index.html
@@ -44,10 +44,7 @@ footer a:hover { text-decoration:underline; }
 </style>
 </head>
 <body>
-
-<div class="header-banner">
-  <img src="https://raw.githubusercontent.com/Artonstyle/Babershop/main/images/logo4.png" alt="C&D Barbershop Banner">
-</div>
+<img src="images/logo4.png" alt="C&D Barbershop Banner">
 
 <div class="welcome-section">
   <h1>Willkommen bei C&D Barbershop</h1>
