--- a/index.html
+++ b/index.html
@@ -5,146 +5,84 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>💈 C&D Barbershop – Black Edition</title>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
-
 <style>
-/* #####################################################################
-# HINWEIS: DIES IST DER KOMPLETTE UND KORRIGIERTE CSS-CODE          #
-# BITTE ERSETZEN SIE DEN INHALT IHRER ALTEN STYLE.CSS ODER DES      #
-# STYLE-BLOCKS IN DER HTML-DATEI VOLLSTÄNDIG DAMIT!                 #
-#####################################################################
-*/
-/* Grundfarben & Typografie */
-:root{
-  --brand:#c0392b;
-  --brand-2:#ff6b61;
-  --bg:#0b0f14; /* dunkles, modernes Theme */
-  --card:#0f1720;
-  --surface:#0b1116;
-  --text:#e6eef6;
-  --muted:#9aa6b2;
-  --glass:rgba(255,255,255,0.03);
-  --max-width:1200px;
-  --radius:10px;
-  font-family: "Poppins", system-ui, -apple-system, "Segoe UI", Roboto, Arial, sans-serif;
+/* ACHTUNG: Dies ist Ihr ursprünglicher minimalistischer CSS-Code, 
+   aber mit den KORREKTUREN FÜR DAS ZU GROSSE BANNER. */
+
+body { font-family:'Poppins', sans-serif; background-color:#000; color:#fff; margin:0; padding:0; }
+p { margin:0; }
+.container { width:90%; max-width:1200px; margin:0 auto; padding:20px; }
+h2 { text-align:center; margin-bottom:30px; font-weight:700; text-shadow:0 0 15px rgba(255,255,255,0.8); }
+.pricing { display:grid; grid-template-columns:repeat(auto-fit,minmax(280px,1fr)); gap:25px; }
+.category { background: rgba(255,255,255,0.05); padding:25px; border-radius:15px; backdrop-filter: blur(10px); box-shadow:0 0 20px rgba(255,255,255,0.3); transition:all 0.3s ease-in-out; }
+.category:hover { box-shadow:0 0 40px rgba(255,255,255,0.9); transform:translateY(-5px); }
+.category h3 { text-align:center; margin-bottom:15px; font-weight:600; }
+.category ul { list-style:none; padding:0; }
+.category li { display:flex; justify-content:space-between; padding:6px 0; border-bottom:1px solid rgba(255,255,255,0.1); }
+
+/* *************************************************************** */
+/* BANNER FIX (KORRIGIERT FÜR DIE GRÖSSE) */
+/* Höhe des Containers wird fest definiert (z.B. 300px) */
+.header-banner { 
+    width:100%; 
+    height: 300px; /* HÖHE FIXIERT */
+    overflow:hidden; 
+    display:flex; 
+    justify-content:center; 
+    align-items:center; 
+    position:relative; 
+    background:#000; 
 }
-*{box-sizing:border-box}
-html,body{height:100%}
-body{
-  margin:0;
-  background:linear-gradient(180deg,var(--bg),rgba(0,0,0,0.03));
-  color:var(--text);
-  line-height:1.5;
-  -webkit-font-smoothing:antialiased;
-  -moz-osx-font-smoothing:grayscale;
-}
-.container{max-width:var(--max-width);margin:0 auto;padding:0 16px}
-
-/* Skip link */
-.skip-link{position:absolute;left:-9999px;top:auto;overflow:hidden}
-.skip-link:focus{left:16px;top:16px;z-index:999;background:var(--card);padding:8px;border-radius:6px;color:var(--text)}
-
-/* Header */
-.site-header{backdrop-filter: blur(6px);background:linear-gradient(180deg, rgba(255,255,255,0.02), transparent);border-bottom:1px solid rgba(255,255,255,0.03)}
-.header-inner{display:flex;align-items:center;justify-content:space-between;padding:18px 0}
-
-/* BANNER FIX: NEUE REGELN FÜR KORREKTE GRÖSSE DES LOGOS */
-.header-banner {
-  width: 100%;
-  height: 300px; /* Feste Höhe, damit das Bild nicht überragt. */
-  overflow: hidden; 
-  display: flex;
-  justify-content: center; /* Zentriert das Bild horizontal */
-  align-items: center; /* Zentriert das Bild vertikal */
-  background: var(--bg); 
-  border-bottom: 2px solid var(--brand); 
+/* Das Bild darf maximal so groß sein wie der Container */
+.header-banner img { 
+    width: auto; /* Auf auto setzen, um Verzerrungen zu vermeiden */
+    max-width: 100%; /* maximal 100% Breite des Containers */
+    max-height: 100%; /* maximal 100% Höhe des Containers */
+    height: auto; 
+    object-fit:contain; /* Skaliert das Bild in den Container, ohne es zu verzerren */
+    image-rendering:-webkit-optimize-contrast; 
+    image-rendering:crisp-edges; 
+    filter:brightness(1.2) contrast(1.1); 
+    border:none; 
 }
 
-.header-banner img {
-  max-width: 100%; 
-  max-height: 100%; 
-  object-fit: contain; /* Skaliert das Bild ohne Verzerrung in den Container */
-  height: auto;
-  filter: brightness(1.2) contrast(1.1);
-  border: none;
-}
-/* ENDE BANNER FIX */
-
-.logo{font-weight:700;color:var(--text);text-decoration:none;font-size:1.05rem}
-.nav-toggle{display:none;background:none;border:0;font-size:1.4rem;color:var(--text)}
-.main-nav ul{display:flex;gap:12px;list-style:none;padding:0;margin:0;align-items:center}
-.main-nav a{text-decoration:none;color:var(--muted);padding:8px 10px;border-radius:8px}
-.main-nav a:hover{color:var(--brand)}
-.cta{background:linear-gradient(180deg,var(--brand),var(--brand-2));color:#111;padding:8px 12px;border-radius:8px;text-decoration:none;box-shadow:0 6px 20px rgba(0,0,0,0.6);font-weight:600}
-
-/* HERO */
-.hero{padding:56px 0;background:linear-gradient(90deg, rgba(255,107,97,0.06), transparent)}
-.hero-grid{display:grid;grid-template-columns:1fr 420px;gap:28px;align-items:center}
-.hero-text h1{margin:0 0 10px;font-size:2.1rem}
-.hero-text p{color:var(--muted);max-width:720px}
-.hero-image img{width:100%;height:auto;border-radius:var(--radius);display:block;box-shadow:0 12px 40px rgba(0,0,0,0.6)}
-
-/* Sections */
-.section{padding:48px 0}
-.section--light{background:linear-gradient(180deg, rgba(255,255,255,0.015), transparent);border-radius:12px}
-.section--dark{background:transparent}
-.lead{max-width:720px;margin-top:6px;color:var(--muted)}
-.service-grid{display:grid;grid-template-columns:repeat(3,1fr);gap:20px;margin-top:20px}
-.service{background:linear-gradient(180deg,var(--card), rgba(255,255,255,0.02));padding:18px;border-radius:12px;box-shadow:0 10px 30px rgba(0,0,0,0.45);border:1px solid rgba(255,255,255,0.02)}
-.service h3{margin:0 0 8px}
-
-/* Gallery */
-.gallery-grid{display:grid;grid-template-columns:repeat(3,1fr);gap:12px}
-.gallery-grid img{width:100%;height:220px;object-fit:cover;border-radius:8px;box-shadow:0 8px 30px rgba(0,0,0,0.45)}
-
-/* Team */
-.team-grid{display:grid;grid-template-columns:repeat(2,1fr);gap:20px}
-.team-member{background:linear-gradient(180deg,var(--card), rgba(255,255,255,0.02));padding:12px;border-radius:12px;text-align:center;box-shadow:0 8px 24px rgba(0,0,0,0.45)}
-.team-member img{width:100%;height:220px;object-fit:cover;border-radius:8px;margin-bottom:8px}
-
-/* Contact */
-.contact-grid{display:grid;grid-template-columns:360px 1fr 360px;gap:20px;align-items:start}
-.contact-card{background:linear-gradient(180deg,var(--card), rgba(255,255,255,0.02));padding:18px;border-radius:12px;border:1px solid rgba(255,255,255,0.02)}
-.contact-form{background:linear-gradient(180deg,var(--card), rgba(255,255,255,0.02));padding:18px;border-radius:12px;border:1px solid rgba(255,255,255,0.02)}
-.contact-form label{display:block;margin-top:8px;font-weight:600;color:var(--text)}
-.contact-form input,.contact-form textarea{width:100%;padding:10px;margin-top:6px;border-radius:10px;border:1px solid rgba(255,255,255,0.04);background:rgba(255,255,255,0.02);color:var(--text)}
-.form-note{font-size:0.85rem;color:var(--muted);margin-top:8px}
-.map-wrapper iframe{width:100%;height:260px;border-radius:10px;border:0;box-shadow:0 10px 30px rgba(0,0,0,0.6)}
-
-/* Footer */
-.site-footer{padding:18px 0;background:#06070a;color:var(--muted)}
-.footer-inner{display:flex;justify-content:space-between;align-items:center;gap:12px;flex-wrap:wrap}
-
-/* Buttons */
-.btn{display:inline-block;padding:10px 16px;border-radius:10px;text-decoration:none;border:0}
-.btn-primary{background:linear-gradient(180deg,var(--brand),var(--brand-2));color:#111;box-shadow:0 8px 30px rgba(0,0,0,0.6)}
-.btn-secondary{background:transparent;border:1px solid rgba(255,255,255,0.06);color:var(--text)}
-.btn-ghost{background:transparent;border:1px solid rgba(255,255,255,0.04);color:var(--muted)}
-
-/* Cookie banner */
-.cookie-banner{position:fixed;left:16px;right:16px;bottom:16px;background:var(--card);padding:12px;border-radius:10px;box-shadow:0 8px 30px rgba(0,0,0,0.24);display:flex;justify-content:space-between;gap:12px;align-items:center}
-.cookie-actions{display:flex;gap:8px}
-
-/* Responsive */
-@media(max-width:980px){
-  .hero-grid{grid-template-columns:1fr}
-  .service-grid{grid-template-columns:repeat(2,1fr)}
-  .gallery-grid{grid-template-columns:repeat(2,1fr)}
-  .team-grid{grid-template-columns:1fr 1fr}
-  .contact-grid{grid-template-columns:1fr;grid-auto-rows:min-content}
-}
-@media(max-width:640px){
-  .main-nav{display:none}
-  .nav-toggle{display:block}
-  .service-grid{grid-template-columns:1fr}
-  .gallery-grid{grid-template-columns:1fr}
-  .team-grid{grid-template-columns:1fr}
-  .cookie-banner{left:8px;right:8px;flex-direction:column;align-items:flex-start}
-  
-  /* NEU: Höhe des Banners auf Mobilgeräten reduzieren */
-  .header-banner {
-    height: 200px; /* Kleinere Höhe auf Handys */
+/* MOBILE FIX (HÖHE HIER AUF Z.B. 200PX REDUZIERT) */
+@media (max-width:768px) {
+  .header-banner { 
+    height: 200px; /* Kleinere Höhe für Mobile */
+    background:#000; 
+    box-shadow:none; 
+    border:none; 
+  }
+  .header-banner img { 
+    max-width:100%; /* Nur noch max-width/max-height, um Contain beizubehalten */
+    max-height:100%;
+    object-fit:contain; 
+    filter:brightness(1.3) contrast(1.2); 
+    image-rendering:-webkit-optimize-contrast; 
+    image-rendering:crisp-edges; 
   }
 }
+/* *************************************************************** */
+
+
+.welcome-section { text-align:center; padding:30px 20px; background:rgba(255,255,255,0.05); backdrop-filter:blur(8px); margin:0 auto 40px auto; border-radius:15px; box-shadow:0 0 25px rgba(255,255,255,0.2); max-width:900px; }
+.welcome-section h1 { font-size:2em; margin-bottom:10px; text-shadow:0 0 20px rgba(255,255,255,0.8); }
+.welcome-section p { font-size:1.1em; color:#ddd; line-height:1.6; }
+.gift-section { text-align:center; margin:60px auto; background:rgba(255,255,255,0.05); padding:40px 20px; border-radius:15px; box-shadow:0 0 25px rgba(255,255,255,0.2); max-width:900px; }
+.gift-section h2 { color:#ffd700; text-shadow:0 0 15px rgba(255,215,0,0.8); margin-bottom:20px; }
+.gift-section img { width:100%; max-width:700px; border-radius:10px; box-shadow:0 0 25px rgba(255,215,0,0.4); height:auto; }
+.opening-hours { margin-top:20px; text-align:center; }
+.opening-hours ul { list-style:none; padding:0; display:inline-block; text-align:left; color:#ddd; }
+.opening-hours li { padding:5px 0; border-bottom:1px solid rgba(255,255,255,0.1); }
+.opening-hours li strong { color:#ffd700; }
+footer { text-align:center; padding:15px 0; background:#050505; color:#888; margin-top:50px; border-top:1px solid rgba(255,255,255,0.1); }
+footer a { color:#ffd700; text-decoration:none; margin:0 10px; }
+footer a:hover { text-decoration:underline; }
+.social-links { margin-top:15px; }
+.social-links a { display:inline-block; margin:0 8px; }
+.social-links img { width:28px; height:28px; filter:brightness(1.2); transition:transform 0.3s ease; }
+.social-links img:hover { transform:scale(1.2); filter:brightness(1.5); }
 </style>
 </head>
 <body>
@@ -153,78 +91,51 @@ body{
   <img src="https://raw.githubusercontent.com/Artonstyle/Barbershop/main/images/logo4.png" alt="C&D Barbershop Banner">
 </div>
 
-<div class="welcome-section container">
+<div class="welcome-section">
   <h1>Willkommen bei C&D Barbershop</h1>
   <p>Schön, dass Sie hier sind! C&D Barbershop steht für Qualität, Stil und Persönlichkeit. In einer modernen Atmosphäre bieten wir individuelle Beratung, trendige Schnitte und hochwertige Pflege – für Ihr perfektes Haar- und Bartgefühl.</p>
 </div>
 
-<div class="container section">
-  <h2 style="text-align:center;">💇‍♂️ Preisliste</h2>
-  <div class="service-grid">
-    <div class="service">
-      <h3>Haarschnitte</h3>
+<div class="container">
+  <h2>💇‍♂️ Preisliste</h2>
+  <div class="pricing">
+    <div class="category">
+      <h3>Leistungen</h3>
       <ul>
         <li><span>Haarschnitt</span><span>20 €</span></li>
+        <li><span>Bart</span><span>10 €</span></li>
         <li><span>Schneiden, Waschen und Föhnen</span><span>25 €</span></li>
+        <li><span>Augenbrauen</span><span>5 €</span></li>
+        <li><span>Heißwachs</span><span>10 €</span></li>
+        <li><span>Gesichtsmaske</span><span>10 €</span></li>
         <li><span>Kinder bis 12 Jahre</span><span>15 €</span></li>
         <li><span>Kinder mit Behindertenausweis</span><span>Kostenlos</span></li>
       </ul>
     </div>
-    <div class="service">
-      <h3>Bart & Pflege</h3>
-      <ul>
-        <li><span>Bart</span><span>10 €</span></li>
-        <li><span>Augenbrauen</span><span>5 €</span></li>
-        <li><span>Heißwachs</span><span>10 €</span></li>
-        <li><span>Gesichtsmaske</span><span>10 €</span></li>
-      </ul>
-    </div>
-    <div class="service">
-      <h3>Spezial</h3>
-      <ul>
-        <li><span>Komplettpaket (Haarschnitt & Bart)</span><span>28 €</span></li>
-        <li><span>Haar-Tattoo</span><span>ab 5 €</span></li>
-      </ul>
-    </div>
   </div>
 </div>
 
-<div class="container section">
-  <h2 style="text-align:center;">📍 Kontakt</h2>
-  <div class="contact-grid">
-      <div class="contact-card">
-          <h3>Öffnungszeiten</h3>
-          <ul>
-              <li><strong>Montag – Freitag:</strong> 09:00 – 19:00 Uhr</li>
-              <li><strong>Samstag:</strong> 09:00 – 18:00 Uhr</li>
-              <li><strong>Sonntag:</strong> Geschlossen ⛔</li>
-          </ul>
-      </div>
-      <div class="contact-card">
-          <h3>Adresse & Kontakt</h3>
-          <p>Bachgasse 68, 69502 Hemsbach</p>
-          <p>📞 +49 123 456 7890</p>
-          <div class="social-links" style="margin-top: 15px;">
-            <a href="#" target="_blank" aria-label="Instagram">
-              <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram Icon" style="width:28px; height:28px; filter:brightness(1.2);">
-            </a>
-          </div>
-          <p style="margin-top:15px;"><a href="https://www.google.com/maps/dir/?api=1&destination=Bachgasse+68,+69502+Hemsbach" target="_blank" class="btn btn-primary" style="color: #111;">Route starten mit Google Maps</a></p>
-      </div>
-      <div class="contact-card map-wrapper">
-          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2558.125700777085!2d8.636655515682855!3d49.56948517936166!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4797d19c1e7a00f5%3A0x867300e8b28a9b24!2sBachgasse%2068%2C%2069502%20Hemsbach!5e0!3m2!1sde!2sde!4v1676387000000!5m2!1sde!2sde" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-      </div>
+<div class="container opening-hours">
+  <h2>📍 Kontakt</h2>
+  <p>Bachgasse 68, 69502 Hemsbach</p>
+  <p>📞 +49 123 456 7890</p>
+  <div class="social-links">
+    <a href="#" target="_blank" aria-label="Instagram">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram Icon">
+    </a>
   </div>
+  <h3>Öffnungszeiten</h3>
+  <ul>
+    <li><strong>Montag – Freitag:</strong><br>09:00 – 19:00 Uhr</li>
+    <li><strong>Samstag:</strong><br>09:00 – 18:00 Uhr</li>
+    <li><strong>Sonntag:</strong><br>Geschlossen ⛔</li>
+  </ul>
+  <p><a href="https://www.google.com/maps/dir/?api=1&destination=Bachgasse+68,+69502+Hemsbach" target="_blank" style="color:#ffd700;">Route starten mit Google Maps</a></p>
 </div>
 
-
-<footer class="site-footer">
-  <div class="container footer-inner">
-      <span>© 2025 C&D Barbershop | Black Edition & Style</span>
-      <div>
-          <a href="#">Datenschutzerklärung</a> | <a href="#">Impressum</a>
-      </div>
-  </div>
+<footer>
+  © 2025 C&D Barbershop | Black Edition & Style<br>
+  <a href="#">Datenschutzerklärung</a> | <a href="#">Impressum</a>
 </footer>
 
 </body>
