--- a/index.html
+++ b/index.html
@@ -6,47 +6,138 @@
 <title>💈 C&D Barbershop – Black Edition</title>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
 <style>
-/* ACHTUNG: Dies ist Ihr ursprünglicher minimalistischer CSS-Code, 
-   aber mit den KORREKTUREN FÜR DAS ZU GROSSE BANNER. */
+/* ------------------------------------------------------------------ */
+/* KORRIGIERTES UND VERBESSERTES CSS */
+/* ------------------------------------------------------------------ */
 
-body { font-family:'Poppins', sans-serif; background-color:#000; color:#fff; margin:0; padding:0; }
+/* 1. Basis & Hintergrund (Subtiler Glow-Effekt im Hintergrund) */
+body { 
+    font-family:'Poppins', sans-serif; 
+    /* Subtiler radialer Gradient für mehr Tiefe */
+    background: radial-gradient(circle at 50% 10%, #080808 0%, #000 70%); 
+    color:#fff; 
+    margin:0; 
+    padding:0; 
+}
 p { margin:0; }
 .container { width:90%; max-width:1200px; margin:0 auto; padding:20px; }
-h2 { text-align:center; margin-bottom:30px; font-weight:700; text-shadow:0 0 15px rgba(255,255,255,0.8); }
-.pricing { display:grid; grid-template-columns:repeat(auto-fit,minmax(280px,1fr)); gap:25px; }
-.category { background: rgba(255,255,255,0.05); padding:25px; border-radius:15px; backdrop-filter: blur(10px); box-shadow:0 0 20px rgba(255,255,255,0.3); transition:all 0.3s ease-in-out; }
-.category:hover { box-shadow:0 0 40px rgba(255,255,255,0.9); transform:translateY(-5px); }
-.category h3 { text-align:center; margin-bottom:15px; font-weight:600; }
-.category ul { list-style:none; padding:0; }
-.category li { display:flex; justify-content:space-between; padding:6px 0; border-bottom:1px solid rgba(255,255,255,0.1); }
 
-/* *************************************************************** */
-/* BANNER FIX (KORRIGIERT FÜR DIE GRÖSSE) */
-/* Höhe des Containers wird fest definiert (z.B. 300px) */
+/* 2. Überschriften (Akzentfarbe für einen cooleren Look) */
+h2 { 
+    text-align:center; 
+    margin-bottom:30px; 
+    font-weight:700; 
+    /* Warmer, roter Akzent für die Headlines */
+    color: #c0392b; 
+    text-shadow:0 0 10px rgba(255, 69, 0, 0.9); 
+}
+
+/* 3. Preisliste Container */
+.pricing { 
+    display:grid; 
+    grid-template-columns:repeat(auto-fit,minmax(280px,1fr)); 
+    gap:25px; 
+}
+.category { 
+    background: rgba(255,255,255,0.05); 
+    padding:25px; 
+    border-radius:15px; 
+    backdrop-filter: blur(10px); 
+    /* Stärkerer, wärmerer Außenschatten */
+    box-shadow:0 0 30px rgba(255, 69, 0, 0.4); 
+    transition:all 0.3s ease-in-out; 
+    border: 1px solid rgba(255, 69, 0, 0.2); /* Dezente rote Grenze */
+}
+.category:hover { 
+    /* Stärkerer Glow beim Hover */
+    box-shadow:0 0 40px rgba(255, 69, 0, 0.9), 0 0 15px rgba(255,255,255,0.5); 
+    transform:translateY(-5px); 
+}
+.category h3 { 
+    text-align:center; 
+    margin-bottom:15px; 
+    font-weight:600; 
+    color: #ffd700; /* Gold-Akzent für Kategorie-Titel */
+}
+.category ul { list-style:none; padding:0; }
+.category li { 
+    display:flex; 
+    justify-content:space-between; 
+    padding:8px 0; 
+    border-bottom:1px solid rgba(255,255,255,0.1); 
+}
+
+/* Preis-Akzent (Das war ein Hauptwunsch für cooler/styler) */
+.category li span:last-child {
+    font-weight: 700;
+    color: #ffd700; /* Gold-Akzentfarbe für Preise */
+    font-size: 1.1em;
+    text-shadow: 0 0 5px rgba(255, 215, 0, 0.5);
+}
+
+/* 4. HEADER BANNER FIX (Für korrekte Logogröße) */
 .header-banner { 
     width:100%; 
-    height: 300px; /* HÖHE FIXIERT */
+    height: 300px; /* HÖHE FIXIERT für Desktop */
     overflow:hidden; 
     display:flex; 
     justify-content:center; 
     align-items:center; 
     position:relative; 
     background:#000; 
+    border-bottom: 2px solid #c0392b; /* Akzentlinie */
 }
-/* Das Bild darf maximal so groß sein wie der Container */
 .header-banner img { 
-    width: auto; /* Auf auto setzen, um Verzerrungen zu vermeiden */
-    max-width: 100%; /* maximal 100% Breite des Containers */
-    max-height: 100%; /* maximal 100% Höhe des Containers */
+    width: auto; 
+    max-width: 100%; 
+    max-height: 100%; 
     height: auto; 
-    object-fit:contain; /* Skaliert das Bild in den Container, ohne es zu verzerren */
+    object-fit:contain; 
     image-rendering:-webkit-optimize-contrast; 
     image-rendering:crisp-edges; 
     filter:brightness(1.2) contrast(1.1); 
     border:none; 
 }
+/* 5. Willkommensbereich */
+.welcome-section { 
+    text-align:center; 
+    padding:30px 20px; 
+    background:rgba(255,255,255,0.05); 
+    backdrop-filter:blur(8px); 
+    margin:0 auto 40px auto; 
+    border-radius:15px; 
+    box-shadow:0 0 25px rgba(255,255,255,0.2); 
+    max-width:900px; 
+}
+.welcome-section h1 { 
+    font-size:2.4em; /* Etwas größer für mehr Impact */
+    margin-bottom:10px; 
+    text-shadow:0 0 20px rgba(255,255,255,0.8); 
+    color: #ffd700; /* Gold-Titel */
+}
+.welcome-section p { font-size:1.1em; color:#ddd; line-height:1.6; }
 
-/* MOBILE FIX (HÖHE HIER AUF Z.B. 200PX REDUZIERT) */
+/* 6. Kontakt & Öffnungszeiten */
+.opening-hours { margin-top:20px; text-align:center; }
+.opening-hours ul { list-style:none; padding:0; display:inline-block; text-align:left; color:#ddd; }
+.opening-hours li { padding:5px 0; border-bottom:1px solid rgba(255,255,255,0.1); }
+.opening-hours li strong { color:#ffd700; } /* Gold für die Zeiten */
+footer { 
+    text-align:center; 
+    padding:15px 0; 
+    background:#050505; 
+    color:#888; 
+    margin-top:50px; 
+    border-top:2px solid #c0392b; /* Akzentlinie */
+}
+footer a { color:#ffd700; text-decoration:none; margin:0 10px; }
+footer a:hover { text-decoration:underline; }
+.social-links { margin-top:15px; }
+.social-links a { display:inline-block; margin:0 8px; }
+.social-links img { width:28px; height:28px; filter:brightness(1.2); transition:transform 0.3s ease; }
+.social-links img:hover { transform:scale(1.3); filter:brightness(1.5) drop-shadow(0 0 5px #ffd700); } /* Stärkerer Hover-Effekt */
+
+/* 7. Responsive Fixes */
 @media (max-width:768px) {
   .header-banner { 
     height: 200px; /* Kleinere Höhe für Mobile */
@@ -55,7 +146,7 @@ h2 { text-align:center; margin-bottom:30px; font-weight:700; text-shadow:0 0 15p
     border:none; 
   }
   .header-banner img { 
-    max-width:100%; /* Nur noch max-width/max-height, um Contain beizubehalten */
+    max-width:100%; 
     max-height:100%;
     object-fit:contain; 
     filter:brightness(1.3) contrast(1.2); 
@@ -63,32 +154,12 @@ h2 { text-align:center; margin-bottom:30px; font-weight:700; text-shadow:0 0 15p
     image-rendering:crisp-edges; 
   }
 }
-/* *************************************************************** */
-
-
-.welcome-section { text-align:center; padding:30px 20px; background:rgba(255,255,255,0.05); backdrop-filter:blur(8px); margin:0 auto 40px auto; border-radius:15px; box-shadow:0 0 25px rgba(255,255,255,0.2); max-width:900px; }
-.welcome-section h1 { font-size:2em; margin-bottom:10px; text-shadow:0 0 20px rgba(255,255,255,0.8); }
-.welcome-section p { font-size:1.1em; color:#ddd; line-height:1.6; }
-.gift-section { text-align:center; margin:60px auto; background:rgba(255,255,255,0.05); padding:40px 20px; border-radius:15px; box-shadow:0 0 25px rgba(255,255,255,0.2); max-width:900px; }
-.gift-section h2 { color:#ffd700; text-shadow:0 0 15px rgba(255,215,0,0.8); margin-bottom:20px; }
-.gift-section img { width:100%; max-width:700px; border-radius:10px; box-shadow:0 0 25px rgba(255,215,0,0.4); height:auto; }
-.opening-hours { margin-top:20px; text-align:center; }
-.opening-hours ul { list-style:none; padding:0; display:inline-block; text-align:left; color:#ddd; }
-.opening-hours li { padding:5px 0; border-bottom:1px solid rgba(255,255,255,0.1); }
-.opening-hours li strong { color:#ffd700; }
-footer { text-align:center; padding:15px 0; background:#050505; color:#888; margin-top:50px; border-top:1px solid rgba(255,255,255,0.1); }
-footer a { color:#ffd700; text-decoration:none; margin:0 10px; }
-footer a:hover { text-decoration:underline; }
-.social-links { margin-top:15px; }
-.social-links a { display:inline-block; margin:0 8px; }
-.social-links img { width:28px; height:28px; filter:brightness(1.2); transition:transform 0.3s ease; }
-.social-links img:hover { transform:scale(1.2); filter:brightness(1.5); }
 </style>
 </head>
 <body>
 
 <div class="header-banner">
-  <img src="https://raw.githubusercontent.com/Artonstyle/Barbershop/main/images/logo3.png" alt="C&D Barbershop Banner">
+  <img src="https://raw.githubusercontent.com/Artonstyle/Barbershop/main/images/logo4.png" alt="C&D Barbershop Banner">
 </div>
 
 <div class="welcome-section">
@@ -130,7 +201,7 @@ footer a:hover { text-decoration:underline; }
     <li><strong>Samstag:</strong><br>09:00 – 18:00 Uhr</li>
     <li><strong>Sonntag:</strong><br>Geschlossen ⛔</li>
   </ul>
-  <p><a href="https://www.google.com/maps/dir/?api=1&destination=Bachgasse+68,+69502+Hemsbach" target="_blank" style="color:#ffd700;">Route starten mit Google Maps</a></p>
+  <p><a href="https://www.google.com/maps/dir/?api=1&destination=Bachgasse+68,+69502+Hemsbach" target="_blank" style="color:#ffd700; font-weight: 700;">Route starten mit Google Maps</a></p>
 </div>
 
 <footer>
