--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
 <style>
 /* ------------------------------------------------------------------ */
-/* ORIGINALER CSS-CODE + BANNER FIX + 3D-EFFEKTE + NEUE GALERIE CSS */
+/* ORIGINALER CSS-CODE + BANNER FIX + 3D-EFFEKTE + GALERIE CSS */
 /* ------------------------------------------------------------------ */
 
 body { 
@@ -101,16 +101,16 @@ footer a:hover { text-decoration:underline; }
 .social-links img:hover { transform:scale(1.2); filter:brightness(1.5); }
 
 /* *************************************************************** */
-/* NEUE REGELN FÜR DIE BILDER-GALERIE */
+/* REGELN FÜR DIE BILDER-GALERIE */
 /* *************************************************************** */
 .gallery-section {
-    padding: 60px 0; /* Abstand oben und unten */
-    background: rgba(255,255,255,0.02); /* Leichter Hintergrund, um sich abzuheben */
+    padding: 60px 0; 
+    background: rgba(255,255,255,0.02); 
     border-radius: 15px;
     margin: 40px auto;
     max-width: 1200px;
     box-shadow:0 10px 30px rgba(0,0,0,0.7), 0 0 25px rgba(255,255,255,0.2);
-    transform: translateZ(-10px); /* Leichter 3D-Effekt */
+    transform: translateZ(-10px); 
     transition: transform 0.5s ease-in-out;
 }
 .gallery-section:hover {
@@ -119,16 +119,16 @@ footer a:hover { text-decoration:underline; }
 
 .gallery-grid {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); /* 3 Bilder auf größeren Bildschirmen */
-    gap: 20px; /* Abstand zwischen den Bildern */
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); 
+    gap: 20px; 
     margin-top: 30px;
-    padding: 0 20px; /* Innenabstand für das Grid */
+    padding: 0 20px; 
 }
 
 .gallery-item {
     background: rgba(255,255,255,0.03);
     border-radius: 10px;
-    overflow: hidden; /* Sicherstellen, dass das Bild innerhalb des Radius bleibt */
+    overflow: hidden; 
     box-shadow: 0 5px 15px rgba(0,0,0,0.6);
     transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
     text-align: center;
@@ -137,8 +137,8 @@ footer a:hover { text-decoration:underline; }
 
 .gallery-item img {
     width: 100%;
-    height: 300px; /* Feste Höhe für alle Bilder */
-    object-fit: cover; /* Bilder füllen den Bereich aus und werden beschnitten */
+    height: 300px; 
+    object-fit: cover; 
     display: block;
     border-bottom: 1px solid rgba(255,255,255,0.1);
 }
@@ -150,7 +150,7 @@ footer a:hover { text-decoration:underline; }
 }
 
 .gallery-item:hover {
-    transform: translateY(-5px) scale(1.02); /* Bild schwebt leicht und wird größer */
+    transform: translateY(-5px) scale(1.02); 
     box-shadow: 0 10px 25px rgba(255,255,255,0.4);
 }
 
@@ -163,15 +163,15 @@ footer a:hover { text-decoration:underline; }
   /* 3D-Effekt auf Mobile deaktivieren, damit es nicht seltsam aussieht */
   .category, .category:hover, 
   .welcome-section, .welcome-section:hover,
-  .gallery-section, .gallery-section:hover { /* Auch für Galerie */
+  .gallery-section, .gallery-section:hover { 
       transform: none !important;
       box-shadow: 0 0 20px rgba(255,255,255,0.3);
   }
   .gallery-grid {
-    grid-template-columns: 1fr; /* Einzelne Spalte auf sehr kleinen Bildschirmen */
+    grid-template-columns: 1fr; 
   }
   .gallery-item img {
-    height: 250px; /* Etwas kleinere Bilder auf Mobile */
+    height: 250px; 
   }
 }
 </style>
@@ -210,31 +210,32 @@ footer a:hover { text-decoration:underline; }
   <h2>✂️ Unsere Stylings</h2>
   <div class="gallery-grid">
     <div class="gallery-item">
-      <img src="https://via.placeholder.com/300x400/121212/fff?text=Klassischer+Schnitt" alt="Klassischer Haarschnitt">
-      <p>Klassischer Schnitt</p>
-    </div>
-    <div class="gallery-item">
-      <img src="https://via.placeholder.com/300x400/121212/fff?text=Moderner+Fade" alt="Moderner Fade Haarschnitt">
+      <img src="URL_zum_Haarschnitt_Fade" alt="Moderner Fade Haarschnitt">
       <p>Moderner Fade</p>
     </div>
     <div class="gallery-item">
-      <img src="https://via.placeholder.com/300x400/121212/fff?text=Bart+Trim" alt="Bartpflege">
+      <img src="URL_zum_Klassischer_Schnitt" alt="Klassischer Haarschnitt">
+      <p>Klassischer Schnitt</p>
+    </div>
+    <div class="gallery-item">
+      <img src="URL_zum_Bart_Trim" alt="Bartpflege">
       <p>Präziser Bart-Trim</p>
     </div>
     <div class="gallery-item">
-      <img src="https://via.placeholder.com/300x400/121212/fff?text=Side+Part" alt="Side Part Haarschnitt">
+      <img src="URL_zum_Eleganter_Side_Part" alt="Side Part Haarschnitt">
       <p>Eleganter Side Part</p>
     </div>
     <div class="gallery-item">
-      <img src="https://via.placeholder.com/300x400/121212/fff?text=Texturierter+Crop" alt="Texturierter Crop Haarschnitt">
-      <p>Texturierter Crop</p>
+      <img src="URL_zum_Extremer_Skin_Fade" alt="Extremer Skin Fade Haarschnitt">
+      <p>Extremer Skin Fade</p>
     </div>
     <div class="gallery-item">
-      <img src="https://via.placeholder.com/300x400/121212/fff?text=Skin+Fade" alt="Skin Fade Haarschnitt">
-      <p>Extremer Skin Fade</p>
+      <img src="URL_zum_Texturierter_Crop" alt="Texturierter Crop Haarschnitt">
+      <p>Texturierter Crop</p>
     </div>
   </div>
 </div>
+
 <div class="container opening-hours">
   <h2>📍 Kontakt</h2>
   <p>Bachgasse 68, 69502 Hemsbach</p>
