Update image sources in gallery section

--- a/index.html
+++ b/index.html
@@ -210,27 +210,27 @@ footer a:hover { text-decoration:underline; }
   <h2>✂️ Unsere Stylings</h2>
   <div class="gallery-grid">
     <div class="gallery-item">
-      <img src="URL_zum_Haarschnitt_Fade" alt="Moderner Fade Haarschnitt">
+      <img src="https://picsum.photos/id/1012/600/800" alt="Moderner Fade Haarschnitt">
       <p>Moderner Fade</p>
     </div>
     <div class="gallery-item">
-      <img src="URL_zum_Klassischer_Schnitt" alt="Klassischer Haarschnitt">
+      <img src="https://picsum.photos/id/1018/600/800" alt="Klassischer Haarschnitt">
       <p>Klassischer Schnitt</p>
     </div>
     <div class="gallery-item">
-      <img src="URL_zum_Bart_Trim" alt="Bartpflege">
+      <img src="https://picsum.photos/id/1025/600/800" alt="Bartpflege">
       <p>Präziser Bart-Trim</p>
     </div>
     <div class="gallery-item">
-      <img src="URL_zum_Eleganter_Side_Part" alt="Side Part Haarschnitt">
+      <img src="https://picsum.photos/id/1027/600/800" alt="Eleganter Side Part Haarschnitt">
       <p>Eleganter Side Part</p>
     </div>
     <div class="gallery-item">
-      <img src="URL_zum_Extremer_Skin_Fade" alt="Extremer Skin Fade Haarschnitt">
+      <img src="https://picsum.photos/id/1035/600/800" alt="Extremer Skin Fade Haarschnitt">
       <p>Extremer Skin Fade</p>
     </div>
     <div class="gallery-item">
-      <img src="URL_zum_Texturierter_Crop" alt="Texturierter Crop Haarschnitt">
+      <img src="https://picsum.photos/id/1041/600/800" alt="Texturierter Crop Haarschnitt">
       <p>Texturierter Crop</p>
     </div>
   </div>
