Update images in index.html for gallery section

--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@ footer a:hover { text-decoration:underline; }
 <body>
 
 <div class="header-banner">
-  <img src="https://raw.githubusercontent.com/Artonstyle/Barbershop/main/images/logo3.png" alt="C&D Barbershop Banner">
+  <img src="https://raw.githubusercontent.com/Artonstyle/Barbershop/main/images/logo4.png" alt="C&D Barbershop Banner">
 </div>
 
 <div class="welcome-section">
@@ -210,27 +210,27 @@ footer a:hover { text-decoration:underline; }
   <h2>✂️ Unsere Stylings</h2>
   <div class="gallery-grid">
     <div class="gallery-item">
-      <img src="https://images.unsplash.com/photo-1547846549-3017a523a67d?q=80&w=600&h=800&fit=crop&auto=format&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Moderner Fade Haarschnitt">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/e/e0/Close_Up_Of_A_Barber_Giving_A_Man_A_Haircut.jpg" alt="Moderner Fade Haarschnitt">
       <p>Moderner Fade</p>
     </div>
     <div class="gallery-item">
-      <img src="https://images.unsplash.com/photo-1579895058866-9d391f63e4ef?q=80&w=600&h=800&fit=crop&auto=format&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Klassischer Haarschnitt">
+      <img src="https://cdn.pixabay.com/photo/2016/06/17/14/53/man-1463990_1280.jpg" alt="Klassischer Haarschnitt">
       <p>Klassischer Schnitt</p>
     </div>
     <div class="gallery-item">
-      <img src="https://images.unsplash.com/photo-1616035900593-9c8789311685?q=80&w=600&h=800&fit=crop&auto=format&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Bartpflege">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/5/52/Barber_trimming_a_customer%27s_beard.jpg" alt="Bartpflege">
       <p>Präziser Bart-Trim</p>
     </div>
     <div class="gallery-item">
-      <img src="https://images.unsplash.com/photo-1621607512214-682979203499?q=80&w=600&h=800&fit=crop&auto=format&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Eleganter Side Part Haarschnitt">
+      <img src="https://cdn.pixabay.com/photo/2020/09/20/19/21/barber-5587783_1280.jpg" alt="Eleganter Side Part Haarschnitt">
       <p>Eleganter Side Part</p>
     </div>
     <div class="gallery-item">
-      <img src="https://images.unsplash.com/photo-1605497788044-5a2a1b702e17?q=80&w=600&h=800&fit=crop&auto=format&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Extremer Skin Fade Haarschnitt">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/e/e0/Barber_with_clippers_and_customer.jpg" alt="Extremer Skin Fade Haarschnitt">
       <p>Extremer Skin Fade</p>
     </div>
     <div class="gallery-item">
-      <img src="https://images.unsplash.com/photo-1596773099908-10b2f1559132?q=80&w=600&h=800&fit=crop&auto=format&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Texturierter Crop Haarschnitt">
+      <img src="https://cdn.pixabay.com/photo/2023/04/09/16/09/man-7911685_1280.jpg" alt="Texturierter Crop Haarschnitt">
       <p>Texturierter Crop</p>
     </div>
   </div>
