--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@ footer a:hover { text-decoration:underline; }
 <body>
 
 <div class="header-banner">
-  <img src="https://raw.githubusercontent.com/Artonstyle/Barbershop/main/images/Barbershop.mp4" alt="C&D Barbershop Banner">
+  <img src="https://raw.githubusercontent.com/Artonstyle/Barbershop/main/images/Barbershop-logo6.png" alt="C&D Barbershop Banner">
 </div>
 
 <div class="welcome-section">
