--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@ footer a:hover { text-decoration:underline; }
 
 <div class="container image-price-section">
   <h2>💇‍♂️ Unsere Preisliste</h2>
-  <img src="pfad/zu/ihrem/preislistenbild.jpg" alt="Aktuelle Preisliste des C&D Barbershops" style="max-width: 600px; margin: 0 auto;">
+  <img src="pfad/zu/ihrem/preisliste_barbershop.png" alt="Aktuelle Preisliste des C&D Barbershops" style="max-width: 600px; margin: 0 auto;">
 </div>
 <div class="container gallery-section">
   <h2>✂️ Unsere Stylings</h2>
