--- a/index.html
+++ b/index.html
@@ -22,10 +22,6 @@ p { margin:0; }
 .container { width:90%; max-width:1200px; margin:0 auto; padding:20px; }
 h2 { text-align:center; margin-bottom:30px; font-weight:700; text-shadow:0 0 15px rgba(255,255,255,0.8); }
 
-/* --- ENTFERNTER PREISLISTEN-CSS --- */
-/* .pricing, .category, .category:hover, .category h3, .category ul, .category li { ... } */
-
-
 /* *************************************************************** */
 /* BANNER FIX */
 /* *************************************************************** */
@@ -199,7 +195,7 @@ footer a:hover { text-decoration:underline; }
 
 <div class="container image-price-section">
   <h2>💇‍♂️ Unsere Preisliste</h2>
-  <img src="images/preisliste_barbershop.jpg" alt="Aktuelle Preisliste des C&D Barbershops" style="max-width: 600px; margin: 0 auto;">
+  <img src="images/preisliste_barbershop.png" alt="Aktuelle Preisliste des C&D Barbershops" style="max-width: 600px; margin: 0 auto;">
 </div>
 <div class="container gallery-section">
   <h2>✂️ Unsere Stylings</h2>
