--- a/index.html
+++ b/index.html
@@ -179,6 +179,11 @@ footer a:hover { text-decoration:underline; }
   .gallery-item img {
     height: 250px; 
   }
+  /* Zusätzliche Anpassung für das Preislisten-Bild auf Mobile: 
+     Stellt sicher, dass das Bild auch auf sehr kleinen Screens gut sichtbar bleibt. */
+  .image-price-section img {
+      max-width: 90%; 
+  }
 }
 </style>
 </head>
