--- a/index.html
+++ b/index.html
@@ -189,7 +189,8 @@ footer a:hover { text-decoration:underline; }
   }
   /* Anpassung für das Preislisten-Bild auf Mobile */
   .image-price-section img {
-      max-width: 95%; 
+      max-width: 100%; /* HIER GEÄNDERT: Volle Breite im Container */
+      width: 100%;     /* HIER GEÄNDERT: Volle Breite im Container */
   }
 }
 </style>
@@ -207,7 +208,7 @@ footer a:hover { text-decoration:underline; }
 
 <div class="container image-price-section">
   <h2>💇‍♂️ Unsere Preisliste</h2>
-  <img src="images/Barbershop-preisliste.png" alt="Aktuelle Preisliste des C&D Barbershops" style="max-width: 600px; margin: 0 auto;">
+  <img src="images/preisliste_barbershop.png" alt="Aktuelle Preisliste des C&D Barbershops">
 </div>
 <div class="container guestbook-section">
     <h2>⭐ Ihr Feedback</h2>
