--- a/index.html
+++ b/index.html
@@ -260,8 +260,8 @@ footer a:hover { text-decoration:underline; }
 </footer>
 
 <script>
-// ⚠️ DIES IST DEINE PERSÖNLICHE URL FÜR DIE KOMMUNIKATION MIT GOOGLE SHEETS
-const sheetURL = "https://script.google.com/macros/s/AKfycbwIlAbzl1HratCEkaMUsK_JLXwF_kP0jo53dKV1TAsIIwgzBnGTix4KyhHiYw0FY5nz7w/exec";
+// ⚠️ DIES IST IHRE NEUE PERSÖNLICHE URL FÜR DIE KOMMUNIKATION MIT GOOGLE SHEETS
+const sheetURL = "https://script.google.com/macros/s/AKfycbwSdRsz_cB6JKISJDXGUwuMFcn0UCldmyYV2WkzXww-E7fukY8HOeC-HAk-7x9ZwxZf/exec";
 
 const guestEntriesDiv = document.getElementById('guestEntries');
 const form = document.getElementById("guestbookForm");
