--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@ footer a:hover { text-decoration:underline; }
 </footer>
 
 <script>
-// ✅ AKTUALISIERT: IHRE NEUE URL FÜR GOOGLE APPS SCRIPT
+// ✅ AKTUALISIERT: IHRE NEUESTE KORREKTE URL FÜR GOOGLE APPS SCRIPT
 const sheetURL = "https://script.google.com/macros/s/AKfycbz0SHyxg1PJWSBkKfa5pGOItRzaR9KB1widxC1ogvShk3Tu420fEosGb_Kj2KhixsTx/exec";
 
 const guestEntriesDiv = document.getElementById('guestEntries');
