--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@ footer a:hover { text-decoration:underline; }
 
 <script>
 // ✅ AKTUALISIERT: IHRE NEUESTE KORREKTE URL FÜR DIE 3-FELDER-LOGIK
-const sheetURL = "https://script.google.com/macros/s/AKfycbzAg4516b8lJqIjwzfRttGgA2yM8a5Nk-rdUkpvBWukw3vCHwOL38Wton7aa4Vpl0Bw/exec";
+const sheetURL = "https://script.google.com/macros/s/AKfycbyEdBJ454thG-tdL12tbZczgBW3J_Aszz4WV4fXdIRH9Gyx4F_kdDdyOAc5zKzY3Iqr/exec";
 
 const guestEntriesDiv = document.getElementById('guestEntries');
 const form = document.getElementById("guestbookForm");
@@ -283,6 +283,7 @@ async function loadEntries() {
       guestEntriesDiv.innerHTML = entries.reverse().map((e, index) => {
         
         // --- KORREKTUR FÜR DIE DATUMSANZEIGE (FORMAT: TT.MM.JJJJ, HH:MM) ---
+        // Das Datum wird vom Script als String oder Date-Objekt übergeben und hier formatiert.
         let rawDate = new Date(e.date);
         const formattedDate = rawDate.toLocaleString('de-DE', {
             year: 'numeric',
